<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidJava</string>
    <string name="email_hint">Ваша почта</string>
    <string name="password_hint">Пароль</string>
    <string name="messenger">Мессенджер</string>
    <string name="login">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="register">Регестрация</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="age">Возраст</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="forgot_password_screen">Забыли пароль?</string>
    <string name="reset">Сбросить</string>
    <string name="logout">Выйти</string>
    <string name="success">Ссылка на сброс была успешно отправлена на почту!</string>
    <string name="type_message_hint">Введите сообщение:</string>
</resources>