<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".lesson_12_messenger.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="58sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="#A49292"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="password"
            android:backgroundTint="#A49292"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#A49292"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#A49292"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#A49292"
            android:hint="@string/age"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textSize="28sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>