<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fon"
    android:gravity="center"
    tools:context=".lesson_12_messenger.ResetPasswordActivity">

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/forgot_password_screen"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:backgroundTint="#A49292"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/hints"
        android:textSize="32sp"
        android:textStyle="italic" />


    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/main_color"
        android:backgroundTint="@color/element"
        android:text="@string/reset"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>